fixed alignment of first titlebar inside sidebar to align with titlebar in viewport

--- a/src/applications/GlasCAD/Project/Elevations/SingleElevation/BuildElevation/RightSidebar/RightSidebar.scss
+++ b/src/applications/GlasCAD/Project/Elevations/SingleElevation/BuildElevation/RightSidebar/RightSidebar.scss
@@ -55,6 +55,10 @@ Viewport margin is controlled in JavaScript, since RightSidebar is nested deep w
     .sidebar-button {
         position: relative;
         width: 100%;
+
+        &:first-child {
+            margin-bottom: $xxx-large;
+        }
         
         + .sidebar-button {
             margin-left: 0;
